--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -74,6 +74,7 @@ jobs:
     - name: Azure login
       uses: azure/login@v1.4.3
       with:
+        namespace: mentoring
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -137,6 +138,7 @@ jobs:
       uses: Azure/k8s-deploy@v3.1
       with:
         action: deploy
+        namespace: mentoring
         manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
         images: |
           ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
