--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: travel-app
-      version: 1.0
+#      version: 1.0
   template:
     metadata:
       labels:
