--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -13,12 +13,12 @@ spec:
     metadata:
       labels:
         app: travel-app
-        version: 1.0
+#        version: 1.0
         type: backend
         provider: iclinic
     spec:
-      nodeSelector:
-        agentpool: qc2nodes
+#      nodeSelector:
+#        agentpool: qc2nodes
       containers:
         - name: travel-app
           image: iclinicacr.azurecr.io/travel-app
