--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
+# see https://github.com/marketplace/actions/http-request-action
 name: CI
 
 # Controls when the workflow will run
@@ -16,24 +16,19 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deployment:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Trigger Jenkins Build
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://jenkins-aks.iclinicemr.com/job/patient-qc2/build?token=${{ secrets.JENKINS_TOKEN }}'
+          username: $${ secrets.JENKINS_USER }}
+          password: ${{ secrets.JENKINS_PASSWORD }}
+          method: 'GET'
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
           
 
     
