--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -24,8 +24,9 @@ jobs:
         uses: fjogeleit/http-request-action@v1
         with:
           url: 'https://jenkins-aks.iclinicemr.com/job/travel-app/build?token=${{ secrets.JENKINS_TOKEN }}'
-          username: $${ secrets.JENKINS_USER }}
-          password: ${{ secrets.JENKINS_PASSWORD }}
+#          username: $${ secrets.JENKINS_USER }}
+#          password: ${{ secrets.JENKINS_PASSWORD }}
+          customHeaders: '{ "Authorization": "Basic ${{secrets.JENKINS_AUTH}}"}'
           method: 'GET'
 
 
